Add description, icon, and images

--- a/apps/songbook/templates/legoworship/base.html
+++ b/apps/songbook/templates/legoworship/base.html
@@ -17,13 +17,18 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-guitar"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Lego Worship</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>One thing I ask from the Lord,<br />
+								this only do I seek:<br />
+								that I may dwell in the house of the Lord<br />
+								all the days of my life,<br />
+								to gaze on the beauty of the Lord<br />
+								and to seek Him in His temple.<br />
+								Psalm 27:4</p>
 							</div>
 						</div>
 						<nav>
